--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,12 @@ env
 *.pth
 **Icon*
 **.html
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
+
+build
+.gitmodules
